# aoc21

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Common/: DataUtils.py
P1/: process.py
P10/: process_p10.py
P11/: process_p11.py
P11/input/: input_x.txt
P12/: process_p12.py
P13/: process_p13.py
P14/: process_p14.py
P15/: process_p15.py  process_p15_dj.py
P15/input/: input2.txt  input_x.txt
P16/: process_16.py
P17/: process_17.py
P18/: P18.cpp  P18.h  P18Operations.cpp  P18Operations.h  P18SimpleTests.cpp  P18SimpleTests.h
P18/input/: input0.txt  inputz2.txt
P2/: process_2.py
P20/: P20.cpp  P20.h  P20_DataBufferOps.h
P21/: Die.h  P21.cpp  P21.h
P22/: P22.cpp  P22.h  P22_Operations.h  SpaceOperations.h  TestSpaceOperations.h
P22/input/: inputx.txt
P3/: process_31.py  process_32.py
P4/: process_p4.py
P5/: process_p5.py
P6/: process_p6.py
P7/: process_p7.py
P8/: CMakeLists.txt  process_p8.py
P8/include/: p8.h
P8/src/: p8.cpp
P9/: process_p9.py
native/include/common/: BinaryTree.h  BinaryTreeOps.h  DataBuffer2D.h  FileUtils.h
native/src/: main.cpp
native/src/common/: FileUtils.cpp
